--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
   
   </div>
 
+<section id="columm">
 <div id="divImg">
-    <ol id="lista">
-
-    </ol>
-
-  
-
 </div>
+  <ol id="lista">
+
+  </ol>
+</section>
+
+
 
 </main> 
 
