--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@ integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3Ah
 
   </header>
 <main>
+
+  <div id=personagens>
+  <img src="./img/personaright.png" alt="mulher lol" height="800px" id="Mulher">
+  <img src="./img/personaleft.png" alt="homem lol" height="600px" id="Homem">
+</div>
+
   <h1>Escolha seu Campeão</h1>
   <div id="princ" class="main flex">
   
