passando tamanho para rem

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3Ah
 <main>
 
   <div id=personagens>
-  <img src="./img/personaright.png" alt="mulher lol" height="800px" id="Mulher">
-  <img src="./img/personaleft.png" alt="homem lol" height="600px" id="Homem">
+  <img src="./img/personaright.png" alt="mulher lol" id="Mulher">
+  <img src="./img/personaleft.png" alt="homem lol" id="Homem">
 </div>
 
   <h1>Escolha seu Campeão</h1>
