--- a/index.html
+++ b/index.html
@@ -5,15 +5,54 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+
+<!-- Bootstrap CSS import -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
+
+<link href="/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!-- Bootstrap Icons import -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+<link rel="stylesheet" href="../css/logereg.css" />
+<link rel="stylesheet" href="../css/global.css" />
+<link rel="shortcut icon" href="./img/html-icon.png" type="image/x-icon" />
+
+<link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+<link rel="manifest" href="/docs/5.1/assets/img/favicons/manifest.json">
+<link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
+<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
+
+
   <title>League of Legends </title>
 </head>
 <body>
 
   <header>
+
+<!-- Custom styles for this template -->
+<div class="container">
+  <header class="d-flex justify-content-center py-3">
+    <ul class="nav nav-pills">
+      <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Personagens</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+    </ul>
+  </header>
+</div>
+
 <img id="logo" src="./img/A_league.png" alt="">
 
   </header>
 <main>
+
+  <div id=personagens>
+  <img src="./img/personaright.png" alt="mulher lol" id="Mulher">
+  <img src="./img/personaleft.png" alt="homem lol" id="Homem">
+</div>
+
   <h1>Escolha seu Campeão</h1>
   <div id="princ" class="main flex">
   
@@ -47,21 +86,28 @@
   
   </div>
 
-<section id="columm">
-<div id="divImg">
-</div>
-  <ol id="lista">
+  <section id="columm">
 
-  </ol>
-
-<p></p>
-</section>
+  </section>
 
 
 
 </main> 
 
+<!-- Footer -->
+<footer class="footer py-4 bg-black text-white-50">
+  <div class="container text-center">
+      <medium>Copyright &copy; 2021 LOL Escolha Seu Campeão</medium>
+  </div>
+</footer>
+
   <script src="./js/script.js"></script>
+  <!-- Bootstrap JS import -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+  crossorigin="anonymous"></script>
+
+  <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   
 </body>
 </html>
